import("//presearch/browser/translate/buildflags/buildflags.gni")
import("//presearch/build/config.gni")
import("//presearch/components/binance/browser/buildflags/buildflags.gni")
import("//presearch/components/presearch_ads/browser/buildflags/buildflags.gni")
import(
    "//presearch/components/presearch_perf_predictor/browser/buildflags/buildflags.gni")
import("//presearch/components/presearch_referrals/buildflags/buildflags.gni")
import("//presearch/components/presearch_rewards/browser/buildflags/buildflags.gni")
import("//presearch/components/presearch_sync/buildflags/buildflags.gni")
import("//presearch/components/presearch_wallet/common/buildflags/buildflags.gni")
import("//presearch/components/presearch_wayback_machine/buildflags/buildflags.gni")
import("//presearch/components/presearch_webtorrent/browser/buildflags/buildflags.gni")
import("//presearch/components/crypto_dot_com/browser/buildflags/buildflags.gni")
import("//presearch/components/decentralized_dns/buildflags/buildflags.gni")
import("//presearch/components/gemini/browser/buildflags/buildflags.gni")
import("//presearch/components/gemini/browser/buildflags/buildflags.gni")
import("//presearch/components/greaselion/browser/buildflags/buildflags.gni")
import("//presearch/components/ipfs/buildflags/buildflags.gni")
import("//presearch/components/speedreader/buildflags.gni")
import("//presearch/components/tor/buildflags/buildflags.gni")
import("//presearch/test/testing.gni")
import("//chrome/common/features.gni")
import("//components/gcm_driver/config.gni")
import("//testing/test.gni")

if (is_android) {
  import("//build/config/android/rules.gni")
  import("//chrome/android/chrome_public_apk_tmpl.gni")
}

static_library("presearch_test_support_unit") {
  testonly = true

  sources = [
    # Not including presearch_testing_profile.{h,cc} here, they need to be pulled
    # via an override for testing_profile.{h,cc} for upstream tests to build.
    "base/presearch_unit_test_suite.cc",
    "base/presearch_unit_test_suite.h",
    "base/run_all_unittests.cc",
  ]

  public_deps = [
    "//base",
    "//chrome:resources",
    "//chrome:strings",
    "//chrome/browser",
    "//chrome/common",
    "//chrome/test:test_support",
  ]

  deps = [
    "//presearch/browser/profiles",
    "//presearch/common:pref_names",
    "//components/gcm_driver",
    "//components/gcm_driver:gcm_buildflags",
    "//mojo/core/embedder",
  ]

  if (is_win) {
    deps += [ "//chrome/install_static/test:test_support" ]
  }
}

test("presearch_unit_tests") {
  testonly = true

  sources = [
    "../../components/domain_reliability/test_util.cc",
    "../../components/domain_reliability/test_util.h",
    "//presearch/browser/presearch_content_browser_client_unittest.cc",
    "//presearch/browser/presearch_resources_util_unittest.cc",
    "//presearch/browser/browsing_data/presearch_browsing_data_remover_delegate_unittest.cc",
    "//presearch/browser/download/presearch_download_item_model_unittest.cc",
    "//presearch/browser/net/presearch_ad_block_tp_network_delegate_helper_unittest.cc",
    "//presearch/browser/net/presearch_block_safebrowsing_urls_unittest.cc",
    "//presearch/browser/net/presearch_common_static_redirect_network_delegate_helper_unittest.cc",
    "//presearch/browser/net/presearch_httpse_network_delegate_helper_unittest.cc",
    "//presearch/browser/net/presearch_network_delegate_base_unittest.cc",
    "//presearch/browser/net/presearch_site_hacks_network_delegate_helper_unittest.cc",
    "//presearch/browser/net/presearch_static_redirect_network_delegate_helper_unittest.cc",
    "//presearch/browser/net/presearch_system_request_handler_unittest.cc",
    "//presearch/browser/profiles/profile_util_unittest.cc",
    "//presearch/chromium_src/chrome/browser/history/history_utils_unittest.cc",
    "//presearch/chromium_src/chrome/browser/lookalikes/lookalike_url_navigation_throttle_unittest.cc",
    "//presearch/chromium_src/chrome/browser/signin/account_consistency_disabled_unittest.cc",
    "//presearch/chromium_src/components/autofill/core/browser/autofill_experiments_unittest.cc",
    "//presearch/chromium_src/components/metrics/enabled_state_provider_unittest.cc",
    "//presearch/chromium_src/components/password_manager/core/browser/password_bubble_experiment_unittest.cc",
    "//presearch/chromium_src/components/variations/service/field_trial_unittest.cc",
    "//presearch/chromium_src/components/version_info/presearch_version_info_unittest.cc",
    "//presearch/chromium_src/net/cookies/presearch_canonical_cookie_unittest.cc",
    "//presearch/chromium_src/services/network/public/cpp/cors/cors_unittest.cc",
    "//presearch/common/presearch_content_client_unittest.cc",
    "//presearch/components/assist_ranker/ranker_model_loader_impl_unittest.cc",
    "//presearch/components/presearch_private_cdn/private_cdn_helper_unittest.cc",
    "//presearch/components/presearch_search/browser/presearch_search_host_unittest.cc",
    "//presearch/components/presearch_shields/browser/ad_block_regional_service_unittest.cc",
    "//presearch/components/presearch_shields/browser/adblock_stub_response_unittest.cc",
    "//presearch/components/presearch_shields/browser/cosmetic_merge_unittest.cc",
    "//presearch/components/presearch_shields/browser/csp_merge_unittest.cc",
    "//presearch/components/presearch_shields/browser/https_everywhere_recently_used_cache_unittest.cpp",
    "//presearch/components/content_settings/core/browser/presearch_content_settings_pref_provider_unittest.cc",
    "//presearch/components/content_settings/core/browser/presearch_content_settings_utils_unittest.cc",
    "//presearch/components/l10n/common/locale_util_unittest.cc",
    "//presearch/components/ntp_background_images/browser/ntp_background_images_service_unittest.cc",
    "//presearch/components/ntp_background_images/browser/ntp_background_images_source_unittest.cc",
    "//presearch/components/ntp_background_images/browser/view_counter_model_unittest.cc",
    "//presearch/components/ntp_background_images/browser/view_counter_service_unittest.cc",
    "//presearch/components/ntp_widget_utils/browser/ntp_widget_utils_oauth_unittest.cc",
    "//presearch/components/ntp_widget_utils/browser/ntp_widget_utils_region_unittest.cc",
    "//presearch/components/p3a/presearch_p2a_protocols_unittest.cc",
    "//presearch/components/translate/core/browser/translate_language_list_unittest.cc",
    "//presearch/components/weekly_storage/weekly_storage_unittest.cc",
    "//presearch/third_party/libaddressinput/chromium/chrome_metadata_source_unittest.cc",
    "//presearch/vendor/presearch_base/random_unittest.cc",
    "//chrome/browser/custom_handlers/test_protocol_handler_registry_delegate.cc",
    "//chrome/browser/custom_handlers/test_protocol_handler_registry_delegate.h",
    "//components/bookmarks/browser/bookmark_model_unittest.cc",
  ]

  defines = presearch_service_key_defines

  deps = [
    "//presearch/app:command_ids",
    "//presearch/app/theme:presearch_theme_resources_grit",
    "//presearch/base:base_unittests",
    "//presearch/browser",
    "//presearch/browser/browsing_data",
    "//presearch/browser/content_settings:unit_tests",
    "//presearch/browser/first_run:unit_tests",
    "//presearch/browser/metrics/test:presearch_metrics_unit_tests",
    "//presearch/browser/net",
    "//presearch/browser/new_tab:unittest",
    "//presearch/browser/permissions:unit_tests",
    "//presearch/browser/profiles:profiles",
    "//presearch/browser/safebrowsing",
    "//presearch/browser/themes",
    "//presearch/browser/tor:unit_tests",
    "//presearch/browser/translate/buildflags",
    "//presearch/browser/ui",
    "//presearch/browser/ui/sidebar:unit_tests",
    "//presearch/browser/ui/webui/new_tab_page:unit_tests",
    "//presearch/browser/widevine:unittest",
    "//presearch/common:network_constants",
    "//presearch/common:pref_names",
    "//presearch/components/adblock_rust_ffi",
    "//presearch/components/presearch_ads/test:presearch_ads_unit_tests",
    "//presearch/components/presearch_component_updater/browser",
    "//presearch/components/presearch_private_cdn",
    "//presearch/components/presearch_referrals/browser",
    "//presearch/components/presearch_referrals/buildflags",
    "//presearch/components/presearch_referrals/common",
    "//presearch/components/presearch_rewards/test:presearch_rewards_unit_tests",
    "//presearch/components/presearch_search/browser",
    "//presearch/components/presearch_shields/browser",
    "//presearch/components/presearch_shields/common",
    "//presearch/components/presearch_wallet/browser/test:presearch_wallet_unit_tests",
    "//presearch/components/presearch_wallet/common/buildflags",
    "//presearch/components/ipfs/test:presearch_ipfs_unit_tests",
    "//presearch/components/l10n/common",
    "//presearch/components/ntp_background_images/browser",
    "//presearch/components/ntp_background_images/common",
    "//presearch/components/ntp_widget_utils/browser",
    "//presearch/components/p3a",
    "//presearch/components/permissions:unit_tests",
    "//presearch/components/sidebar:unit_tests",
    "//presearch/components/tor:tor_unit_tests",
    "//presearch/components/tor/buildflags",
    "//presearch/components/weekly_storage",
    "//presearch/net/proxy_resolution:unit_tests",
    "//presearch/vendor/bat-native-ledger/test:bat_native_ledger_tests",
    "//presearch/vendor/presearch_base",
    "//chrome:browser_dependencies",
    "//chrome:child_dependencies",
    "//chrome/app:command_ids",
    "//chrome/test:test_support",
    "//components/assist_ranker",
    "//components/assist_ranker/proto",
    "//components/bookmarks/browser",
    "//components/bookmarks/common",
    "//components/content_settings/core/test:test_support",
    "//components/country_codes",
    "//components/domain_reliability:domain_reliability",
    "//components/language/core/browser",
    "//components/os_crypt:test_support",
    "//components/permissions",
    "//components/pref_registry",
    "//components/prefs",
    "//components/prefs:test_support",
    "//components/query_parser",
    "//components/signin/public/base",
    "//components/sync_preferences",
    "//components/translate/core/browser:test_support",
    "//components/user_prefs",
    "//components/variations/service:buildflags",
    "//components/version_info",
    "//content/public/common",
    "//content/test:test_support",
    "//extensions/common:common_constants",
    "//google_apis/gcm",
    "//google_apis/gcm:test_support",
    "//mojo/core/embedder",
    "//services/device/public/cpp:test_support",
    "//services/network:test_support",
    "//services/network/public/cpp",
    "//services/preferences/public/cpp",
  ]

  if (decentralized_dns_enabled) {
    deps += [ "//presearch/browser/decentralized_dns/test:unit_tests" ]
  }

  if (toolkit_views) {
    deps += [ "//chrome/browser/ui/views" ]
  }

  data = [ "data/" ]

  configs += [ "//presearch/build/geolocation" ]

  public_deps = [
    ":presearch_test_support_unit",
    "//base",
    "//base/test:test_support",
    "//presearch:browser_dependencies",
    "//presearch/browser",
    "//presearch/common",
    "//presearch/components/content_settings/core/browser",
    "//presearch/renderer",
    "//presearch/utility",
    "//testing/gtest",
  ]

  if (!is_android) {
    sources += [
      "../utility/importer/chrome_importer_unittest.cc",
      "//presearch/app/presearch_command_line_helper_unittest.cc",
      "//presearch/browser/resources/settings/brandcode_config_fetcher_unittest.cc",
      "//presearch/browser/resources/settings/reset_report_uploader_unittest.cc",
      "//presearch/browser/themes/presearch_theme_service_unittest.cc",
      "//presearch/browser/ui/toolbar/presearch_location_bar_model_delegate_unittest.cc",
      "//presearch/browser/ui/views/accelerator_table_unittest.cc",
      "//presearch/chromium_src/chrome/browser/devtools/url_constants_unittest.cc",
      "//presearch/chromium_src/chrome/browser/profiles/profile_avatar_icon_util_unittest.cc",
      "//presearch/chromium_src/chrome/browser/ui/bookmarks/presearch_bookmark_context_menu_controller_unittest.cc",
      "//chrome/browser/push_messaging/push_messaging_app_identifier_unittest.cc",
      "//chrome/browser/push_messaging/push_messaging_notification_manager_unittest.cc",
      "//chrome/browser/push_messaging/push_messaging_service_unittest.cc",
      "//chrome/common/importer/mock_importer_bridge.cc",
      "//chrome/common/importer/mock_importer_bridge.h",
      "//components/gcm_driver/account_tracker_unittest.cc",
      "//components/gcm_driver/gcm_account_mapper_unittest.cc",
      "//components/gcm_driver/gcm_account_tracker_unittest.cc",
      "//components/gcm_driver/gcm_client_impl_unittest.cc",
      "//components/gcm_driver/gcm_delayed_task_controller_unittest.cc",
      "//components/gcm_driver/gcm_driver_desktop_unittest.cc",
      "//components/gcm_driver/gcm_driver_unittest.cc",

      # TODO(samartnik): this should work on Android, we will review it once unit tests are set up on CI
      "//presearch/chromium_src/chrome/browser/external_protocol/external_protocol_handler_unittest.cc",
      "//presearch/chromium_src/components/search_engines/presearch_template_url_prepopulate_data_unittest.cc",
      "//presearch/chromium_src/components/search_engines/presearch_template_url_service_util_unittest.cc",
      "//presearch/chromium_src/components/translate/core/browser/translate_manager_unittest.cc",
      "//presearch/components/presearch_shields/browser/presearch_shields_util_unittest.cc",
      "//presearch/components/omnibox/browser/fake_autocomplete_provider_client.cc",
      "//presearch/components/omnibox/browser/fake_autocomplete_provider_client.h",
      "//presearch/components/omnibox/browser/suggested_sites_provider_unittest.cc",
      "//presearch/components/omnibox/browser/topsites_provider_unittest.cc",
    ]
  }

  if (!is_android && !is_ios) {
    deps += [ "//presearch/browser/ui/toolbar:presearch_app_menu_unit_test" ]
  }

  # On Windows, presearch_install_static_unittests covers channel test.
  if (is_mac || is_linux) {
    sources += [ "//presearch/common/presearch_channel_info_unittest.cc" ]
  }

  if (is_mac) {
    sources += [
      "//presearch/chromium_src/chrome/browser/shell_integration_unittest_mac.cc",
      "//presearch/chromium_src/chrome/common/chrome_constants_unittest_mac.cc",
    ]
  }

  if (binance_enabled) {
    sources +=
        [ "//presearch/components/binance/browser/binance_json_parser_unittest.cc" ]
    deps += [
      "//presearch/components/binance/browser",
      "//presearch/components/content_settings/core/common",
    ]
  }

  if (gemini_enabled) {
    sources +=
        [ "//presearch/components/gemini/browser/gemini_json_parser_unittest.cc" ]
    deps += [
      "//presearch/components/binance/browser",
      "//presearch/components/content_settings/core/common",
      "//presearch/components/gemini/browser",
    ]
  }

  if (crypto_dot_com_enabled) {
    sources += [ "//presearch/components/crypto_dot_com/browser/crypto_dot_com_json_parser_unittest.cc" ]
    deps += [ "//presearch/components/crypto_dot_com/browser" ]
  }

  if (is_linux) {
    configs += [ "//presearch/build/linux:linux_channel_names" ]
  }

  if (is_android) {
    deps += [
      ":presearch_public_test_apk",
      "//presearch:presearch_pak_assets",
      "//chrome:chrome_android_core",
      "//chrome/android:chrome_apk_paks",
      "//chrome/test/android:chrome_java_test_support",
      "//components/gcm_driver/instance_id/android:instance_id_driver_test_support_java",
      "//v8:v8_external_startup_data_assets",
    ]
    data += [
      "$root_gen_dir/chrome/android/chrome_apk_paks/chrome_100_percent.pak",
      "$root_gen_dir/chrome/android/chrome_apk_paks/locales/en-US.pak",
      "$root_gen_dir/chrome/android/chrome_apk_paks/resources.pak",
      "$root_out_dir/presearch_100_percent.pak",
      "$root_out_dir/presearch_resources.pak",
      "//presearch/components/presearch_perf_predictor/resources/entities-httparchive-nostats.json",
    ]
  } else {
    deps += [ ":presearch_installer_unittests" ]
  }

  if (enable_extensions) {
    sources += [
      "//presearch/browser/extensions/api/presearch_extensions_api_client_unittest.cc",
      "//presearch/browser/extensions/chrome_content_verifier_delegate_unittest.cc",
      "//presearch/browser/extensions/install_verifier_unittest.cc",
      "//presearch/chromium_src/extensions/browser/sandboxed_unpacker_unittest.cc",
      "//presearch/common/importer/chrome_importer_utils_unittest.cc",
      "//chrome/browser/extensions/extension_service_test_base.cc",
      "//chrome/browser/extensions/extension_service_test_base.h",
    ]

    deps += [
      "//presearch/browser/extensions",
      "//presearch/common/importer",
      "//chrome/browser/extensions",
      "//components/crx_file",
      "//components/policy/core/common:test_support",
      "//extensions/browser:test_support",
      "//extensions/browser/api/web_request",
      "//url",
    ]
  }

  if (enable_presearch_referrals) {
    sources += [ "//presearch/browser/presearch_stats/presearch_stats_updater_unittest.cc" ]

    deps += [
      # This is only used in the unit test, not the browser test.
      # TODO(keur): Reminder to move this out when we migrate
      # stats browser tests into unit tests.
      "//presearch/browser/presearch_stats:stats_updater",
      "//presearch/components/presearch_ads/browser:testutil",
      "//presearch/components/presearch_stats/browser",
      "//presearch/vendor/bat-native-ads",
    ]

    if (!is_android) {
      sources += [
        # TODO(samartnik): this should work on Android, we will review it once unit tests are set up on CI
        "//presearch/browser/net/presearch_referrals_network_delegate_helper_unittest.cc",
      ]
    }
  }

  if (enable_presearch_webtorrent) {
    sources += [
      "//presearch/browser/extensions/presearch_webtorrent_navigation_throttle_unittest.cc",
      "//presearch/browser/net/presearch_torrent_redirect_network_delegate_helper_unittest.cc",
    ]

    deps += [
      "//presearch/common:pref_names",
      "//presearch/components/presearch_referrals/browser",
    ]
  }

  if (presearch_wallet_enabled) {
    sources += [ "//presearch/browser/extensions/presearch_wallet_unittest.cc" ]
    deps += [
      "//presearch/browser/presearch_wallet",
      "//presearch/common:pref_names",
      "//presearch/components/presearch_wallet/browser",
      "//presearch/components/presearch_wallet/common",
    ]
  }

  if (enable_presearch_translate_go) {
    sources += [ "//presearch/browser/net/presearch_translate_redirect_network_delegate_helper_unittest.cc" ]
  }

  if (enable_presearch_translate_extension) {
    sources += [ "//presearch/browser/ui/views/translate/presearch_translate_bubble_view_unittest.cc" ]

    deps += [
      "//presearch/browser/ui",
      "//components/language/core/common",
    ]
  }

  if (enable_presearch_sync) {
    sources += [
      "//presearch/components/presearch_sync/crypto/crypto_unittest.cc",
      "//components/sync/base/model_type_unittest.cc",
      "//components/sync/driver/sync_auth_manager_unittest.cc",
      "//components/sync_device_info/device_info_sync_bridge_unittest.cc",
    ]

    deps += [
      "//presearch/components/presearch_sync:crypto",
      "//presearch/components/presearch_sync:network_time_helper",
      "//presearch/components/signin/public/identity_manager:unit_tests",
      "//presearch/components/sync/driver:unit_tests",
      "//presearch/components/sync/engine:unit_tests",
      "//components/signin/public/identity_manager:test_support",
    ]
  }

  if (enable_presearch_wayback_machine) {
    sources += [ "//presearch/components/presearch_wayback_machine/presearch_wayback_machine_utils_unittest.cc" ]

    deps += [ "//presearch/components/presearch_wayback_machine" ]
  }

  if (enable_presearch_perf_predictor) {
    sources += [
      "//presearch/components/presearch_perf_predictor/browser/bandwidth_linreg_unittest.cc",
      "//presearch/components/presearch_perf_predictor/browser/bandwidth_savings_predictor_unittest.cc",
      "//presearch/components/presearch_perf_predictor/browser/named_third_party_registry_unittest.cc",
      "//presearch/components/presearch_perf_predictor/browser/p3a_bandwidth_savings_tracker_unittest.cc",
    ]

    deps += [
      "//presearch/components/presearch_perf_predictor/browser",
      "//components/page_load_metrics/common",
    ]
  }

  if (enable_speedreader) {
    sources +=
        [ "//presearch/components/speedreader/rust/ffi/speedreader_unittest.cc" ]

    deps += [ "//presearch/components/speedreader" ]
  }
  if (ipfs_enabled) {
    deps += [ "//presearch/browser/ipfs/test:unittests" ]
  }
}

if (!is_android && !is_ios) {
  test("presearch_installer_unittests") {
    deps = [
      "//base/test:run_all_unittests",
      "//base/test:test_support",
    ]

    if (is_mac) {
      # See chromium_src/base/mac/foundation_util.mm for why this is needed.
      deps += [ "//chrome/common" ]
    }

    if (is_win) {
      sources = [
        "//presearch/chromium_src/chrome/install_static/presearch_install_details_unittest.cc",
        "//presearch/chromium_src/chrome/install_static/presearch_install_modes_unittest.cc",
        "//presearch/chromium_src/chrome/install_static/presearch_install_util_unittest.cc",
        "//presearch/chromium_src/chrome/install_static/presearch_product_install_details_unittest.cc",
        "//presearch/chromium_src/chrome/install_static/presearch_user_data_dir_win_unittest.cc",
        "//presearch/chromium_src/chrome/installer/mini_installer/presearch_mini_installer_unittest.cc",
      ]
      include_dirs = [ "$target_gen_dir" ]
      deps += [
        "//base",
        "//chrome/chrome_elf:nt_registry",
        "//chrome/install_static:install_static_util",
        "//chrome/install_static/test:test_support",
        "//chrome/installer/mini_installer:lib",
        "//components/version_info",
        "//components/version_info:channel",
      ]
      public_deps = [
        "//testing/gmock",
        "//testing/gtest",
      ]
    }
  }
}

group("presearch_browser_tests_deps") {
  testonly = true

  # force these to build for tests
  deps = [
    "//presearch",
    "//presearch:browser_dependencies",
    "//presearch:child_dependencies",
  ]
}

static_library("browser_test_support") {
  testonly = true
  public_deps = [ "//chrome/test:test_support" ]

  sources = [
    "base/presearch_test_launcher_delegate.cc",
    "base/presearch_test_launcher_delegate.h",
  ]

  deps = [ "//chrome/browser" ]
}

static_library("browser_tests_runner") {
  testonly = true

  if (is_win) {
    deps = [ "//chrome/installer/util:strings" ]
  }

  public_deps = [ ":browser_test_support" ]

  sources = [ "base/browser_tests_main.cc" ]
}

if (!is_android) {
  test("presearch_browser_tests") {
    testonly = true

    sources = [
      "//presearch/app/presearch_main_delegate_browsertest.cc",
      "//presearch/app/presearch_main_delegate_runtime_flags_browsertest.cc",
      "//presearch/browser/presearch_content_browser_client_browsertest.cc",
      "//presearch/browser/presearch_prefs_browsertest.cc",
      "//presearch/browser/presearch_resources_browsertest.cc",
      "//presearch/browser/presearch_scheme_load_browsertest.cc",
      "//presearch/browser/presearch_search/presearch_search_browsertest.cc",
      "//presearch/browser/presearch_shields/ad_block_service_browsertest.cc",
      "//presearch/browser/presearch_shields/ad_block_service_browsertest.h",
      "//presearch/browser/presearch_shields/cookie_pref_service_browsertest.cc",
      "//presearch/browser/presearch_shields/domain_block_page_browsertest.cc",
      "//presearch/browser/presearch_stats/presearch_stats_updater_browsertest.cc",
      "//presearch/browser/devtools/presearch_devtools_ui_bindings_browsertest.cc",
      "//presearch/browser/extensions/api/presearch_shields_api_browsertest.cc",
      "//presearch/browser/extensions/api/presearch_theme_api_browsertest.cc",
      "//presearch/browser/extensions/presearch_base_local_data_files_browsertest.cc",
      "//presearch/browser/extensions/presearch_base_local_data_files_browsertest.h",
      "//presearch/browser/extensions/presearch_extension_functional_test.cc",
      "//presearch/browser/extensions/presearch_extension_functional_test.h",
      "//presearch/browser/extensions/presearch_extension_provider_browsertest.cc",
      "//presearch/browser/extensions/presearch_theme_event_router_browsertest.cc",
      "//presearch/browser/net/presearch_network_delegate_browsertest.cc",
      "//presearch/browser/net/presearch_network_delegate_hsts_fingerprinting_browsertest.cc",
      "//presearch/browser/net/presearch_site_hacks_network_delegate_helper_browsertest.cc",
      "//presearch/browser/net/presearch_system_request_handler_browsertest.cc",
      "//presearch/browser/net/global_privacy_control_network_delegate_helper_browsertest.cc",
      "//presearch/browser/policy/presearch_policy_browsertest.cc",
      "//presearch/browser/profiles/presearch_bookmark_model_loaded_observer_browsertest.cc",
      "//presearch/browser/profiles/presearch_profile_manager_browsertest.cc",
      "//presearch/browser/renderer_context_menu/presearch_mock_render_view_context_menu.cc",
      "//presearch/browser/renderer_context_menu/presearch_mock_render_view_context_menu.h",
      "//presearch/browser/renderer_context_menu/presearch_spelling_menu_observer_browsertest.cc",
      "//presearch/browser/search_engines/search_engine_provider_service_browsertest.cc",
      "//presearch/browser/search_engines/search_engine_tracker_browsertest.cc",
      "//presearch/browser/themes/presearch_dark_mode_prefs_migration_browsertest.cc",
      "//presearch/browser/themes/presearch_theme_service_browsertest.cc",
      "//presearch/browser/ui/bookmark/bookmark_tab_helper_browsertest.cc",
      "//presearch/browser/ui/presearch_browser_command_controller_browsertest.cc",
      "//presearch/browser/ui/content_settings/presearch_autoplay_blocked_image_model_browsertest.cc",
      "//presearch/browser/ui/toolbar/presearch_app_menu_model_browsertest.cc",
      "//presearch/browser/ui/views/bookmarks/bookmark_bar_browsertest.cc",
      "//presearch/browser/ui/views/presearch_actions/presearch_actions_container_browsertest.cc",
      "//presearch/browser/ui/views/omnibox/presearch_omnibox_view_views_browsertest.cc",
      "//presearch/browser/ui/views/omnibox/omnibox_autocomplete_browsertest.cc",
      "//presearch/browser/ui/views/profiles/presearch_profile_menu_view_browsertest.cc",
      "//presearch/browser/ui/views/tabs/presearch_tab_context_menu_contents_browsertest.cc",
      "//presearch/browser/ui/views/toolbar/presearch_toolbar_view_browsertest.cc",
      "//presearch/browser/ui/webui/presearch_welcome_ui_browsertest.cc",
      "//presearch/browser/ui/webui/new_tab_page/presearch_new_tab_ui_browsertest.cc",
      "//presearch/chromium_src/chrome/browser/media/router/media_router_feature_browsertest.cc",
      "//presearch/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
      "//presearch/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
      "//presearch/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
      "//presearch/chromium_src/components/content_settings/core/browser/presearch_content_settings_registry_browsertest.cc",
      "//presearch/chromium_src/components/favicon/core/favicon_database_browsertest.cc",
      "//presearch/chromium_src/third_party/blink/public/platform/disable_client_hints_browsertest.cc",
      "//presearch/chromium_src/third_party/blink/renderer/core/frame/reporting_observer_browsertest.cc",
      "//presearch/common/presearch_channel_info_browsertest.cc",
      "//presearch/components/presearch_shields/browser/https_everywhere_service_browsertest.cc",
      "//presearch/components/presearch_shields/browser/tracking_protection_service_browsertest.cc",
      "//presearch/components/content_settings/renderer/presearch_content_settings_agent_impl_autoplay_browsertest.cc",
      "//presearch/components/content_settings/renderer/presearch_content_settings_agent_impl_browsertest.cc",
      "//presearch/components/l10n/browser/locale_helper_mock.cc",
      "//presearch/components/l10n/browser/locale_helper_mock.h",
      "//presearch/third_party/blink/renderer/modules/presearch/navigator_browsertest.cc",
      "//chrome/browser/extensions/browsertest_util.cc",
      "//chrome/browser/extensions/browsertest_util.h",
      "//chrome/browser/extensions/extension_browsertest.cc",
      "//chrome/browser/extensions/extension_browsertest.h",
      "//chrome/browser/extensions/extension_function_test_utils.cc",
      "//chrome/browser/extensions/extension_function_test_utils.h",
      "//chrome/browser/media/media_browsertest.cc",
      "//chrome/browser/media/media_browsertest.h",
      "//chrome/browser/ui/test/test_browser_dialog.cc",
      "//chrome/browser/ui/test/test_browser_dialog.h",
      "//chrome/browser/ui/test/test_browser_ui.cc",
      "//chrome/browser/ui/test/test_browser_ui.h",
    ]

    if (is_mac) {
      sources += [
        "//chrome/browser/ui/test/test_browser_dialog_mac.h",
        "//chrome/browser/ui/test/test_browser_dialog_mac.mm",
      ]
    }

    deps = [
      "//presearch/browser/autoplay:browser_tests",
      "//presearch/browser/browsing_data:browser_tests",
      "//presearch/browser/farbling:browser_tests",
      "//presearch/browser/permissions:browser_tests",
      "//presearch/browser/tor:browser_tests",
      "//presearch/browser/ui/sidebar:browser_tests",
      "//presearch/browser/ui/tabs/test:browser_tests",
      "//presearch/browser/widevine:browser_tests",
      "//presearch/chromium_src/third_party/blink/renderer/modules:browser_tests",
      "//presearch/components/presearch_search/browser",
      "//presearch/renderer/test:browser_tests",
      "//components/security_interstitials/content:security_interstitial_page",
      "//media:test_support",
      "//testing/gmock",
    ]

    if (decentralized_dns_enabled) {
      deps += [ "//presearch/browser/decentralized_dns/test:browser_tests" ]
    }

    if (enable_presearch_perf_predictor) {
      sources += [ "//presearch/components/presearch_perf_predictor/browser/perf_predictor_tab_helper_browsertest.cc" ]

      deps += [
        "//presearch/components/presearch_perf_predictor/browser",
        "//presearch/components/presearch_perf_predictor/common",
        "//components/user_prefs",
      ]
    }

    if (enable_greaselion) {
      sources += [ "//presearch/browser/greaselion/greaselion_browsertest.cc" ]

      deps += [
        "//presearch/components/greaselion/browser",
        "//chrome/browser",
      ]
    }

    if (presearch_wallet_enabled) {
      sources += [
        "//presearch/browser/presearch_wallet/eth_json_rpc_controller_browsertest.cc",
        "//presearch/browser/extensions/api/presearch_wallet_api_browsertest.cc",
        "//presearch/browser/extensions/presearch_wallet_apitest.cc",
      ]

      deps += [
        "//presearch/browser/infobars",
        "//presearch/components/presearch_wallet/browser",
        "//presearch/components/presearch_wallet/common",
      ]
    }

    if (binance_enabled) {
      sources += [
        "//presearch/components/binance/browser/binance_service_browsertest.cc",
      ]

      deps += [
        "//presearch/components/binance/browser",
        "//components/country_codes",
      ]
    }

    if (gemini_enabled) {
      sources +=
          [ "//presearch/components/gemini/browser/gemini_service_browsertest.cc" ]
      deps += [ "//presearch/components/gemini/browser" ]
    }

    if (crypto_dot_com_enabled) {
      sources += [ "//presearch/components/crypto_dot_com/browser/crypto_dot_com_service_browsertest.cc" ]
    }

    if (presearch_rewards_enabled) {
      sources += [
        "//presearch/components/presearch_ads/browser/ads_service_browsertest.cc",
        "//presearch/components/presearch_ads/browser/notification_helper_mock.cc",
        "//presearch/components/presearch_ads/browser/notification_helper_mock.h",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_context_helper.cc",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_context_helper.h",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_context_util.cc",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_context_util.h",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_contribution.cc",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_contribution.h",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_network_util.cc",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_network_util.h",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_promotion.cc",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_promotion.h",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_response.cc",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_response.h",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_util.cc",
        "//presearch/components/presearch_rewards/browser/test/common/rewards_browsertest_util.h",
        "//presearch/components/presearch_rewards/browser/test/rewards_browsertest.cc",
        "//presearch/components/presearch_rewards/browser/test/rewards_contribution_browsertest.cc",
        "//presearch/components/presearch_rewards/browser/test/rewards_flag_browsertest.cc",
        "//presearch/components/presearch_rewards/browser/test/rewards_notification_browsertest.cc",
        "//presearch/components/presearch_rewards/browser/test/rewards_promotion_browsertest.cc",
        "//presearch/components/presearch_rewards/browser/test/rewards_publisher_browsertest.cc",
        "//presearch/components/presearch_rewards/browser/test/rewards_state_browsertest.cc",
      ]

      deps += [
        "//presearch/browser/presearch_ads",
        "//presearch/components/presearch_ads/browser",
        "//presearch/components/presearch_ads/common",
        "//presearch/components/presearch_rewards/browser",
        "//presearch/vendor/bat-native-ads",
        "//presearch/vendor/bat-native-ledger",
        "//presearch/vendor/bat-native-ledger:publishers_proto",
      ]

      configs += [ "//presearch/vendor/bat-native-ads:internal_config" ]
      configs += [ "//presearch/vendor/bat-native-ledger:internal_config" ]
    }

    if (enable_presearch_wayback_machine) {
      sources += [ "//presearch/components/presearch_wayback_machine/presearch_wayback_machine_browsertest.cc" ]
    }

    if (enable_speedreader) {
      sources += [ "//presearch/browser/speedreader/speedreader_browsertest.cc" ]
      deps += [ "//presearch/components/speedreader" ]
    }

    if (is_win || is_linux) {
      sources += [ "//presearch/browser/renderer_context_menu/presearch_spelling_options_submenu_observer_browsertest.cc" ]
      deps += [
        "//presearch/browser/renderer_context_menu",
        "//components/language/core/browser",
      ]
    }

    # API tests
    sources += [
      "//presearch/browser/extensions/presearch_shields_apitest.cc",
      "//chrome/browser/extensions/extension_apitest.cc",
      "//chrome/browser/extensions/extension_apitest.h",
    ]

    if (is_linux) {
      sources += [
        "//presearch/browser/ui/views/presearch_views_delegate_linux_browsertest.cc",
      ]
      configs += [ "//presearch/build/linux:linux_channel_names" ]
      deps += [ "//chrome/app/theme:chrome_unscaled_resources_grit" ]
    }

    defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

    deps += [
      ":presearch_browser_tests_deps",
      "//presearch/app:presearch_generated_resources_grit",
      "//presearch/app:command_ids",
      "//presearch/app/theme:presearch_theme_resources_grit",
      "//presearch/app/theme:presearch_unscaled_resources_grit",
      "//presearch/browser",
      "//presearch/browser/presearch_stats:stats_updater",
      "//presearch/browser/devtools",
      "//presearch/browser/ephemeral_storage:ephemeral_storage_tests",
      "//presearch/browser/extensions",
      "//presearch/browser/net",
      "//presearch/browser/profiles",
      "//presearch/browser/themes",
      "//presearch/browser/tor",
      "//presearch/browser/ui",
      "//presearch/browser/ui/tabs",
      "//presearch/common:network_constants",
      "//presearch/common:pref_names",
      "//presearch/common:switches",
      "//presearch/components/presearch_component_updater/browser",
      "//presearch/components/presearch_referrals/browser",
      "//presearch/components/presearch_referrals/common",
      "//presearch/components/presearch_rewards/browser/buildflags",
      "//presearch/components/presearch_rewards/common",
      "//presearch/components/presearch_shields/browser",
      "//presearch/components/presearch_shields/common",
      "//presearch/components/presearch_sync:prefs",
      "//presearch/components/presearch_sync/buildflags",
      "//presearch/components/presearch_wallet/common/buildflags",
      "//presearch/components/presearch_wayback_machine",
      "//presearch/components/presearch_wayback_machine:buildflags",
      "//presearch/components/content_settings/renderer",
      "//presearch/components/crypto_dot_com/browser",
      "//presearch/components/ipfs/buildflags",
      "//presearch/components/l10n/browser",
      "//presearch/components/tor",
      "//presearch/components/tor/buildflags",
      "//build:chromeos_buildflags",
      "//chrome/app:command_ids",
      "//chrome/browser:browser_process",
      "//chrome/browser:theme_properties",
      "//chrome/browser/ui",
      "//chrome/browser/web_applications/components",
      "//chrome/test:test_support_ui",
      "//components/bookmarks/browser",
      "//components/content_settings/browser",
      "//components/content_settings/core/browser",
      "//components/content_settings/core/common",
      "//components/content_settings/renderer",
      "//components/crx_file",
      "//components/embedder_support",
      "//components/federated_learning:federated_learning",
      "//components/language/core/common",
      "//components/network_time",
      "//components/permissions",
      "//components/policy/core/browser",
      "//components/policy/core/common:test_support",
      "//components/prefs",
      "//components/renderer_context_menu",
      "//components/safe_browsing/content/web_ui",
      "//components/safe_browsing/core:features",
      "//components/spellcheck/browser",
      "//extensions/browser:test_support",
      "//extensions/common:common_constants",
      "//extensions/common:test_support",
      "//ppapi/buildflags",
      "//services/device/public/cpp:device_features",
      "//third_party/blink/public/common",
      "//ui/compositor:test_support",
      "//ui/views",
    ]
    if (ipfs_enabled) {
      deps += [
        "//presearch/browser/ipfs/test:browsertests",
        "//presearch/components/ipfs:ipfs",
      ]
    }
    public_deps = [ ":browser_tests_runner" ]
  }
} else {  # if (!is_android) {
  group("presearch_browser_tests") {
  }
}

# All in this section is for running instrumentation java tests
if (is_android) {
  presearch_public_test_manifest_package = "com.presearch.browser.tests"

  presearch_public_test_apk_manifest =
      "$root_gen_dir/presearch_public_test_apk_manifest/AndroidManifest.xml"

  jinja_template("presearch_public_test_apk_manifest") {
    input = "//presearch/android/javatests/AndroidManifest.xml"
    includes = [ "//chrome/android/java/AndroidManifest.xml" ]
    output = presearch_public_test_apk_manifest
    variables = default_chrome_public_jinja_variables
    variables += [
      "manifest_package=$presearch_public_test_manifest_package",
      "min_sdk_version=19",
      "target_sdk_version=$android_sdk_version",
    ]
  }

  chrome_public_common_apk_or_module_tmpl("presearch_public_test_apk") {
    testonly = true
    target_type = "instrumentation_test_apk"
    apk_name = "PresearchPublicTest"
    android_manifest = presearch_public_test_apk_manifest
    android_manifest_dep = ":presearch_public_test_apk_manifest"
    shared_libraries = [ "//chrome/android:libchromefortest" ]
    if (!is_java_debug) {
      proguard_enabled = true
      proguard_configs = [
        "//presearch/android/java/proguard.flags",
        "//presearch/android/java/apk_for_test.flags",
      ]
    }

    sources = [
      "//presearch/android/javatests/org/chromium/chrome/browser/PresearchPrivateTabTest.java",
      "//presearch/android/javatests/org/chromium/chrome/browser/BytecodeTest.java",
      "//presearch/android/javatests/org/chromium/chrome/browser/password_manager/settings/PresearchPasswordSettingsTest.java",
      "//presearch/android/javatests/org/chromium/chrome/browser/safety_check/PresearchSafetyCheckSettingsFragmentTest.java",
    ]

    deps = [
      "//base:base_java",
      "//base:base_java_test_support",
      "//chrome/android:chrome_apk_pak_assets",
      "//chrome/android:chrome_public_base_module_java_for_test",
      "//chrome/browser/android/lifecycle:java",
      "//chrome/browser/browser_controls/android:java",
      "//chrome/browser/feed/android:java",
      "//chrome/browser/flags:java",
      "//chrome/browser/fullscreen/android:java",
      "//chrome/browser/password_manager/android:java",
      "//chrome/browser/preferences:java",
      "//chrome/browser/safety_check/android:java",
      "//chrome/browser/settings:test_support_java",
      "//chrome/browser/tab:java",
      "//chrome/browser/tabmodel:java",
      "//chrome/browser/ui/android/appmenu:java",
      "//chrome/browser/ui/android/theme:java",
      "//chrome/browser/ui/android/toolbar:java",
      "//chrome/test/android:chrome_java_test_support",
      "//components/browser_ui/widget/android:java",
      "//components/embedder_support/android:browser_context_java",
      "//components/password_manager/core/browser:password_manager_java_enums",
      "//components/permissions/android:java",
      "//components/search_engines/android:java",
      "//components/sync/android:sync_java",
      "//third_party/android_support_test_runner:runner_java",
      "//third_party/androidx:androidx_appcompat_appcompat_java",
      "//third_party/androidx:androidx_preference_preference_java",
      "//third_party/junit",
      "//ui/android:ui_no_recycler_view_java",
    ]
  }
}  # if (is_android) {
