import("//presearch/build/config.gni")

group("symbol_dist_resources") {
}
group("dist_resources") {
}

group("create_dist_zips") {
  deps = [ ":create_symbol_archive" ]
}

action("create_symbol_archive") {
  script = "//build/gn_run_binary.py"
  shell_script = "//presearch/build/android/pack_symbols.sh"

  deps = [ "//presearch/build/android:presearch" ]
  archive_name = "$root_out_dir/dist/Default$target_cpu$target_android_base.tar"

  inputs = [
    script,
    shell_script,
    presearch_android_output,
  ]

  outputs = [ archive_name ]

  args = [
    rebase_path(shell_script, root_build_dir),
    rebase_path(archive_name, root_out_dir),
  ]
}
